Added the random_state variable of the SGDClassifier to the required input variables for the EvaluatePipelines task

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -10,6 +10,7 @@ min-df = [3, 5, 10]
 max-df = [0.6, 0.7, 0.8, 0.9]
 percentile = [5, 10, 15, 20]
 alpha = [0.01, 0.001, 0.001]
+random_state = 1234
 
 [CreateDocumentsFile]
 labeled-pages = "/home/panagiotis/data"
