--- a/luigi.cfg
+++ b/luigi.cfg
@@ -5,12 +5,12 @@ categories = ["category_1", "category_2"]
 test-size = 0.2
 random-state = 1234
 
-[EvaluatePipelines]
+[SelectBestPipelineParameters]
 min-df = [3, 5, 10]
 max-df = [0.6, 0.7, 0.8, 0.9]
 percentile = [5, 10, 15, 20]
 alpha = [0.01, 0.001, 0.001]
-random_state = 1234
+random-state = 1234
 
 [CreateDocumentsFile]
 labeled-pages = "/home/panagiotis/data"
