The documents are loaded from a file that is stored in hdfs

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,3 +1,6 @@
+[Documents]
+documents-file = /user/panagiotis/documents/documents.json
+
 [CreateDataset]
 categories = ["category_1", "category_2"]
 
@@ -12,7 +15,7 @@ percentile = [5, 10, 15, 20]
 alpha = [0.01, 0.001, 0.001]
 random-state = 1234
 
-[CreateDocumentsFile]
-labeled-pages = "/home/panagiotis/data"
-namenode = "localhost"
+[hdfs]
+client = hadoopcli
+namenode-host = "localhost"
 namenode-port = 9000
