The tasks are no longer bloated with the parameters of the their required tasks

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,15 +1,10 @@
-[CreateDataset]
+[CreateClassifier]
 categories = ["category_1", "category_2"]
-
-[SplitTrainTestDataset]
 test-size = 0.2
-random-state = 1234
-
-[SelectBestPipelineParameters]
-min-df = [3, 5, 10]
-max-df = [0.6, 0.7, 0.8, 0.9]
-percentile = [5, 10, 15, 20]
-alpha = [0.01, 0.001, 0.0001]
+min-df-list = [3, 5, 10]
+max-df-list = [0.6, 0.7, 0.8, 0.9]
+percentile-list = [5, 10, 20]
+alpha-list = [0.01, 0.001, 0.0001]
 random-state = 1234
 
 [hdfs]
