The loss function for SGDClassifier has been set to log

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,10 +1,10 @@
 [CreateClassifier]
 categories = ["category_1", "category_2"]
 test-size = 0.2
-min-df-list = [3, 5, 10]
+min-df-list = [3, 5, 10, 15]
 max-df-list = [0.6, 0.7, 0.8, 0.9]
-percentile-list = [5, 10, 20]
-alpha-list = [0.01, 0.001, 0.0001]
+percentile-list = [10, 30, 50, 70, 90]
+alpha-list = [0.001, 0.0001, 0.00001]
 random-state = 1234
 
 [hdfs]
