Updated the readme file and added some more logs

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -1,8 +1,11 @@
 [CreateClassifier]
-categories = ["cat__programming", "cat__science", "cat__business", "cat__technology", "cat__politics"]
+documents-file = /user/panagiotis/documents/documents.json
+output-folder = ./data
+categories = ["programming", "science", "business", "technology", "politics"]
 test-size = 0.2
 min-df-list = [3, 5, 10]
-max-df-list = [0.6, 0.7, 0.8, 0.9]
+max-df-list = [0.5, 0.7, 0.9]
+k-list = [1000, 2000]
 random-state = 1234
 
 
