A percentile of the features is selected instead of a contant number of them

--- a/luigi.cfg
+++ b/luigi.cfg
@@ -5,7 +5,7 @@ categories = ["programming", "science", "business", "technology", "politics"]
 test-size = 0.2
 min-df-list = [3, 5, 10]
 max-df-list = [0.5, 0.7, 0.9]
-k-list = [1000, 2000]
+percentile-list = [10, 30, 50]
 random-state = 1234
 
 
