--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
-beautifulsoup4==4.5.1
-luigi==2.3.3
-numpy==1.11.1
-scipy==0.18.0
-scikit-learn==0.17.1
-matplotlib==2.2.2
+cycler==0.10.0
+docutils==0.15.2
+joblib==0.13.2
+kiwisolver==1.1.0
+lockfile==0.12.2
+luigi==2.8.8
+matplotlib==3.0.3
+numpy==1.17.0
+pkg-resources==0.0.0
+pyparsing==2.4.2
+python-daemon==2.1.2
+python-dateutil==2.8.0
+scikit-learn==0.21.3
+scipy==1.3.1
+six==1.12.0
+tornado==4.5.3
